Fixed custom cursor when horizontal scrolling

--- a/styles/components/Projects.module.css
+++ b/styles/components/Projects.module.css
@@ -125,6 +125,8 @@
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+
+    transition: filter var(--theme-transition) ease-in-out, transform 0.5s ease-in-out;
 }
 .imageContainer:hover .image {
     filter: grayscale(0);
@@ -135,6 +137,9 @@
 
 .imageContainer:hover .imageWrapper {
     opacity: 1;
+}
+.imageContainer:hover .imageWrapper .image {
+    transform: scale(1.1);
 }
 
 .imageIcon {
